[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Background/Background.png" type="Texture" id=2]
[ext_resource path="res://fonts/LCD_Solid.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/pixel_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Menu/Menu_Player.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.3544, 31.1758 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 287.861, 411.525 )
texture = ExtResource( 2 )

[node name="ReportB" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -50.0
margin_right = 200.0
margin_bottom = -10.0
rect_min_size = Vector2( 200, 40 )

[node name="ReportBug" type="Button" parent="ReportB"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
flat = true

[node name="Label" type="Label" parent="ReportB/ReportBug"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 5
text = "Bug report"

[node name="Button" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 40 )
alignment = 1

[node name="Start" type="Button" parent="Button"]
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
flat = true

[node name="Label" type="Label" parent="Button/Start"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/shadow_offset_y = 6
text = "Play"
align = 1
valign = 1

[node name="Menu_Player" type="KinematicBody2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu_Player"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Menu_Player"]
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Menu_Player"]
margin_right = 79.0
margin_bottom = 46.0

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_left = 170.0
margin_top = 300.0
margin_right = 386.0
margin_bottom = 400.0
rect_min_size = Vector2( 200, 100 )
rect_clip_content = true
popup_exclusive = true
window_title = "UserName"
dialog_text = "Enter username:"
dialog_hide_on_ok = false

[node name="LineEdit" type="LineEdit" parent="AcceptDialog"]
margin_left = 8.0
margin_top = 22.0
margin_right = 208.0
margin_bottom = 64.0
rect_min_size = Vector2( 180, 40 )
align = 1
max_length = 16
placeholder_text = "Username"

[node name="Scoreboard" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -50.0
margin_bottom = -10.0

[node name="Scoreboard_button" type="Button" parent="Scoreboard"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
flat = true

[node name="Label" type="Label" parent="Scoreboard/Scoreboard_button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 5
text = "Scoreboard"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="PopupDialog" type="PopupDialog" parent="CanvasLayer"]
self_modulate = Color( 1, 0, 0, 0.917647 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -55.0
margin_right = 225.0
margin_bottom = -2660.0
rect_min_size = Vector2( 450, 100 )
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PopupDialog"]
margin_right = 450.0
margin_bottom = 80.0
rect_min_size = Vector2( 450, 100 )
rect_clip_content = true
custom_fonts/font = SubResource( 4 )
text = "Username taken!"
align = 1
valign = 1
[connection signal="pressed" from="ReportB/ReportBug" to="." method="_on_ReportBug_pressed"]
[connection signal="pressed" from="Button/Start" to="." method="_on_Button_pressed"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
[connection signal="pressed" from="Scoreboard/Scoreboard_button" to="." method="_on_Scoreboard_pressed"]
